welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: value foreach is not a member of (Int, Int, Int, Int)
  for (i <- L){
            ^